respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>No show</fullName>
        <description>Proceso de viusalización folios no show</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process Certificación Proveedores</fullName>
        <description>Proceso de soporte para la Certificación de Proveedores</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CP_Certificacion_proveedor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de tipo Lookup para relacionar el caso con el certificado del proveedor</description>
        <label>Certificacion de proveedor</label>
        <referenceTo>Certificacion_de_Proveedor__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Estatus_certificado__c</fullName>
        <description>Campo de tipo picklist que almacena el estatus del Certificado de los Proveedores</description>
        <label>Estatus del certificado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
                <value>
                    <fullName>Falta Seguimiento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_Actual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Actual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.SCPVetado__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Nuevo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Nuevo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.SCPVetado__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos (Carrier Nuevo)</relationshipLabel>
        <relationshipName>Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Functional Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEAM__c</fullName>
        <label>TEAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neurored</fullName>
                </value>
                <value>
                    <fullName>Pak2go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Everything</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Sample_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Cases</value>
        </filters>
        <label>Sample Cases</label>
    </listViews>
    <listViews>
        <fullName>Trial_Activities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Trial</value>
        </filters>
        <label>Trial Activities</label>
    </listViews>
    <recordTypes>
        <fullName>Certificacion_de_Proveedores</fullName>
        <active>true</active>
        <businessProcess>Support Process Certificación Proveedores</businessProcess>
        <description>Record Type para los casos que se generan para la Certificación de Proveedores</description>
        <label>Certificación de Proveedores</label>
    </recordTypes>
    <recordTypes>
        <fullName>NoShow</fullName>
        <active>true</active>
        <businessProcess>No show</businessProcess>
        <description>Tipo de registro para los casos de Shipments declinados por no show</description>
        <label>No Show</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>